h/static/styles/inject.scss
@import 'base';
@import 'mixins/icons';
@import 'compass/css3/user-interface';
@import 'compass/layout/stretching';
@import 'compass/reset/utilities';

$base-font-size: 14px;

//ADDER////////////////////////////////
.annotator-adder {
  @include box-sizing(border-box);
  direction: ltr;
  height: 35px;
  margin-left: -20px;
  margin-top: -50px;
  padding: 0;
  position: absolute;
  background: $white;
  border: 3px solid $gray;
  border-radius: 4px;
  z-index: 999;

  &:before {
    @include rotate(45deg);
    background: $white;
    bottom: -8px;
    border-bottom: 4px solid $gray;
    border-right: 4px solid $gray;
    content: "";
    display: block;
    height: 6px;
    left: 0;
    margin-left: auto;
    margin-right: auto;
    position: absolute;
    right: 0;
    width: 6px;
  }

  button {
    @include box-shadow(none);
    display: inline-block;
    font-family: h;
    border: none;
    cursor: pointer;
    height: 100%;
    width: 35px;
    font-size: 18px;
    margin: 0;
    padding: 0;
    text-align: center;
    background: $white !important;
    color: $gray-light !important;

    &:active {
      @include single-transition(background-color, .25s);
      background-color: $gray-light !important;
    }

    &:hover {
      color: $gray-dark !important;
    }
  }
}


//HIGHLIGHTS////////////////////////////////
.annotator-highlights-always-on {
  .annotator-hl {
    background-color: $highlight-color;
  }

  .annotator-hl .annotator-hl {
    background-color: $highlight-color-second;
  }

  .annotator-hl .annotator-hl .annotator-hl {
    background-color: $highlight-color-third;
  }
}

.annotator-hl.annotator-hl-focused {
  background-color: $highlight-color-focus !important;

  .annotator-hl {
    background-color: transparent !important;
  }
}

// Sidebar
.annotator-frame {
  @import 'reset';
  @import 'bucket-bar';
  @include nested-reset;
  @include reset-box-model;
  @include user-select(none);
  @extend .noise;
  direction: ltr;
  background: none;
  font-size: $base-font-size;
  line-height: $base-line-height;
  height: 100%;
  position: fixed;
  top: 0;
  left: 100%;
  z-index: 2147483638;
  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);

  &.annotator-collapsed {
    margin-left: 0;
  }

  * {
    background: none;
    font-size: 100%;
    text-indent: 0;
    height: initial;
    width: initial;
  }

  & > iframe {
    height: 100%;
    width: 100%;
    z-index: 3;
    position: relative;
  }

  @include icons {
    font-family: 'h';
  }
}

.annotator-no-transition {
  @include transition(none !important);
}


//CONTROLBAR STUFF////////////////////////////////
.annotator-frame .annotator-toolbar {
  position: absolute;
  left: -($bucket-bar-width + 18px - 7px);
  width: 37px;
  z-index: 2;

  ul {
    height: 100%;
  }

  ul, li {
    @include box-sizing(border-box);
    @include reset-box-model;
    @include reset-list-style;
  }
}

.annotator-frame .annotator-toolbar li {
  @include smallshadow;
  background: $white;
  border: solid 1px $gray-lighter;
  border-radius: 4px;
  left: 0;
  font-size: 18px;
  margin-top: 5px;
  overflow: hidden;
  position: relative;
  height: 30px;
  width: 30px;

  &:first-child {
    @include box-shadow(none);
    border-radius: 4px 0 0 4px;
    border-right-style: none;
    margin-top: 0;
    padding-right: 6px;
    width: 36px;
    z-index: 1;
  }

  button {
    @include single-transition(background-color, .25s, .25s);
    background: $white;
    border: none;
    color: $gray-light;
    text-decoration: none;
    height: 28px;
    width: 28px;
    padding: 0;
  }

  button:active {
    @include single-transition(background-color, .25s);
    background-color: $gray-light;
  }

  button:focus, button:hover {
    outline: 0;
    color: $text-color;
  }
}

/*
  Mobile layout
  240-479 px
  Zoomed out below 320 px
*/

@media screen and (min-width: 15em) {
  .annotator-frame {
    width: 90%;
    margin-left: -90%;
  }
}

/*
  Wide mobile layout
  480-767 px
  Zoomed in above 480 px
*/

@media screen and (min-width: 30em) {
  .annotator-frame {
    width: 70%;
    margin-left: -70%;
  }
}

/*
  Tablet layout
  600-911 px
  Zoomed in above 600 px
*/

@media screen and (min-width: 37.5em) {
  .annotator-frame {
    @include single-transition(margin-left, .15s);
    @include transition-timing-function(cubic-bezier(.55, 0, .2, .8));
    width: 428px;
    margin-left: -428px;
  }
}

/*
  Widescreen layout
  912-1887 px
  Zoomed in above 912 px
*/

@media screen and (min-width: 57em) {
}

/*
  Huge-screen layout
  1888-2520 px
  Zoomed in above 1920 px
*/

@media screen and (min-width: 118em) {
}

